--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,10 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
+		
     </head>
+	<link rel="shortcut icon" href="/favicon.png" type="image/png">
+	<!-- <link rel="shortcut icon" type="image/png" href="http://www.example.com/favicon.png" /> -->
     <body>
 
         <div class="site">
