--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,10 @@ div.social_buttons {
 /* Navigation */
 
 div#header {
-    padding: 34px 0;
+    padding: 35px 0;
     position: relative;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 35px;
 }
 
 div#loader {
@@ -113,7 +115,7 @@ div#loader {
 
 ul.main_navi {
     float: right;
-    width: 410px;
+    /*width: 410px;*/
     margin-top: 8px;
 }
 
