Add middle panel
- middle panel for link to other pages.
- remove unused files.
- update css

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ div.social_buttons {
 /* Navigation */
 
 div#header {
-    padding: 35px 0;
+    padding: 25px 0;
     position: relative;
     border-bottom: 1px solid #ddd;
     margin-bottom: 35px;
@@ -109,7 +109,8 @@ div#header {
 
 div#loader {
     position: absolute;
-    top: 34px;
+    top: 28px;
+    left: 145px;
 }
 
 ul.main_navi {
@@ -168,6 +169,9 @@ div.latest_gallery div.latest_img a img{
 }
 
 /* Our best work */
+div#best_work {
+    padding-bottom: 30px;
+}
 
 div.best_work {
     margin-top: 20px;
@@ -187,6 +191,11 @@ div.best_work img {
     transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
+}
+
+div.best_work p {
+    line-height: 20px;
+    background-color: #FFF;
 }
 
 div.best_work div:hover img {
